# hd2neo4j

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
hd2neo4j/: config.py  main.py  services.py
hd2neo4j/mapping_config/: mapping_config.py
hd2neo4j/neo4j/: mapper.py  repository.py
hd2neo4j/routes/: mapper_routes.py
hd2neo4j/types/: mapper_types.py
hd2neo4j/utils/: data_iterator.py  utils.py
hd2neo4j/vectors/: vectorizer.py
hd2neo4j/vectors/strategies/: bag_of_words.py  sentence_transformer.py
test/hd2neo4j/: integratio_test.py
test/hd2neo4j/mocks/: config.py  data_mock.py
